# rust-opentelemetry-basic-example

./: Cargo.toml  README.md
src/: main.rs
